--- a/src/app/offset/offset.page.html
+++ b/src/app/offset/offset.page.html
@@ -1,23 +1,38 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Compenser</ion-title>
+    <ion-title>{{ 'offset.TITLE' | translate }}</ion-title>
+
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/" text=""></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-item>
+      <ion-range min="50" max="2000" step="50" [(ngModel)]="co2ToOffset" (ionChange)="updateValueToOffset($event)" snaps color="success">
+        <ion-icon slot="start" color="success" name="leaf" size="small"></ion-icon>
+        <ion-icon slot="end"   color="success" name="leaf"></ion-icon>
+      </ion-range>
+    </ion-item>
+    <ion-item>
+      {{ co2ToOffset }} kg
+    </ion-item>
+  </ion-list>
+
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Boisement en France</ion-card-title>
+      <ion-card-title>{{ 'offset.afforestation' | translate }} {{ 'offset.inFrance' | translate }}</ion-card-title>
     </ion-card-header>
 
     <ion-card-content>
-      <ion-icon name="leaf"></ion-icon> Labellisé Bas-Carbone auprès du Ministère de la Transition
-        Ecologique et Solidaire
+      <ion-icon name="leaf"></ion-icon> {{ 'offset.lowCarbonLabelFrenchMinistery' | translate }}
     </ion-card-content>
   
     <ion-item lines="none">
       <ion-icon name="pricetag" slot="start"></ion-icon>
-      <ion-label>4.8€/100kgCO2e</ion-label>
+      <ion-label>5,7€/100kgCO2e</ion-label>
     </ion-item>
   
     <ion-item lines="none">
@@ -26,7 +41,7 @@
     </ion-item>
 
     <ion-button expand="block" id="checkout-button" (click)="sendPaymentRequest()">
-      Compenser {{ co2ToOffset }} kgCO2e
+      {{ 'offset.offset' | translate }} {{ co2ToOffset }} kgCO2 ({{ (co2ToOffset*5.7/100).toFixed(2) }}€)
     </ion-button>
   </ion-card>
 
@@ -34,14 +49,14 @@
     <ion-img src="https://d1muf25xaso8hp.cloudfront.net/https%3A%2F%2Fs3.amazonaws.com%2Fappforest_uf%2Ff1598269972093x834397230219008400%2FLogo%2520STOCK-Noir-01.png"></ion-img>
 
     <ion-card-content>
-      Afin de proposer ce service de compensation carbone, nous avons noué un partenariat avec STOCK; startup dédiée à la compensation carbone sur le territoire français, utilisant un label développé par le Ministère de la Transition Écologique et Solidaire.
+      {{ 'offset.STOCK_explanation' | translate }}
     </ion-card-content>
   </ion-card>
 
   <ion-card>
     <ion-card-content>
-      <h2>Qu'est-ce que compenser ?</h2>
-      <p>Compenser, c'est contribuer au financement de projets de réduction ou de séquestration carbone, de manière à contrebalancer ses propres émissions résiduelles de gaz à effet de serre.</p>
+      <h2>{{ 'offset.whatIsOffsetting_title' | translate }}</h2>
+      <p>{{ 'offset.whatIsOffsetting_explanation' | translate }}</p>
     </ion-card-content>
   </ion-card>
 </ion-content>
