--- a/src/app/offset/offset.page.html
+++ b/src/app/offset/offset.page.html
@@ -31,16 +31,21 @@
     </ion-card-content>
   
     <ion-item lines="none">
-      <ion-icon name="pricetag" slot="start"></ion-icon>
+      <ion-icon name="pricetag-outline" slot="start"></ion-icon>
       <ion-label>5,7€/100kgCO2e</ion-label>
     </ion-item>
   
     <ion-item lines="none">
-      <ion-icon name="location" slot="start"></ion-icon>
+      <ion-icon name="location-outline" slot="start"></ion-icon>
       <ion-label>Maine-et-Loire / Loir-et-Cher</ion-label>
     </ion-item>
 
-    <ion-button expand="block" id="checkout-button" (click)="sendPaymentRequest()">
+    <ion-item lines="none">
+      <ion-icon name="leaf-outline" slot="start"></ion-icon>
+      <ion-label class="ion-text-wrap">Pin Laricio, Chêne Rouge, Chêne Rouvre, Charme, Pin Maritime, Chêne Sessile</ion-label>
+    </ion-item>
+
+    <ion-button expand="block" color="tertiary" id="checkout-button" (click)="sendPaymentRequest()">
       {{ 'offset.offset' | translate }} {{ co2ToOffset }} kgCO2 ({{ (co2ToOffset*5.7/100).toFixed(2) }}€)
     </ion-button>
   </ion-card>
