[FEAT] Changing the primary color of the theme

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,12 +4,12 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #3880ff;
-  --ion-color-primary-rgb: 56, 128, 255;
-  --ion-color-primary-contrast: #ffffff;
-  --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #3171e0;
-  --ion-color-primary-tint: #4c8dff;
+  --ion-color-primary: #00c1d4;
+  --ion-color-primary-rgb: 0,193,212;
+  --ion-color-primary-contrast: #000000;
+  --ion-color-primary-contrast-rgb: 0,0,0;
+  --ion-color-primary-shade: #00aabb;
+  --ion-color-primary-tint: #1ac7d8;
 
   /** secondary **/
   --ion-color-secondary: #0cd1e8;
@@ -211,4 +211,8 @@ ion-card-content {
 }
 .list-md {
   --ion-item-background: white;
+}
+
+.ios {
+  font-family: SFProText;
 }
